Graphing Speed Test 4

--- a/Diatomic Workspace.ipynb
+++ b/Diatomic Workspace.ipynb
@@ -37,6 +37,7 @@
     "from operators import *\n",
     "from schrodinger import *\n",
     "import dill\n",
+    "import pickle\n",
     "import os"
    ]
   },
@@ -95,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fa1598eb6ca47fb813cd323b22596f7",
+       "model_id": "df273620639f480da89b4ab2f2b57be1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -109,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8fc187a882784e2f959648aa99c5929a",
+       "model_id": "55c9d378d0fc4c7c8775b3562c0dede4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,7 +164,7 @@
     "    #check if data storage already has the wavefunctions calculated\n",
     "    if(os.path.exists(schrodFileName)):\n",
     "        with open(schrodFileName, 'rb') as schrodBin:\n",
-    "            schrodSolution = dill.load(schrodBin)    \n",
+    "            graph = dill.load(schrodBin)    \n",
     "            \n",
     "            #if the user is running a larger basis set then allow the user to run their calculation\n",
     "            if(schrodSolution.maxWaveFunctions < basisSize.value):\n",
