Fixes typo in variable name

--- a/Diatomic Workspace.ipynb
+++ b/Diatomic Workspace.ipynb
@@ -96,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df273620639f480da89b4ab2f2b57be1",
+       "model_id": "84dd31c8ff914ed28078fe78baf504fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55c9d378d0fc4c7c8775b3562c0dede4",
+       "model_id": "88ee04334bb446389bd930bb3bdd87b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +164,7 @@
     "    #check if data storage already has the wavefunctions calculated\n",
     "    if(os.path.exists(schrodFileName)):\n",
     "        with open(schrodFileName, 'rb') as schrodBin:\n",
-    "            graph = dill.load(schrodBin)    \n",
+    "            schrodSolution = dill.load(schrodBin)    \n",
     "            \n",
     "            #if the user is running a larger basis set then allow the user to run their calculation\n",
     "            if(schrodSolution.maxWaveFunctions < basisSize.value):\n",
