Graph Speed Improvement 1
-Adds multiprocessing abillities to plot.py

--- a/Diatomic Workspace.ipynb
+++ b/Diatomic Workspace.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9931889da3774f51bd7bc36804efb5e0",
+       "model_id": "62b1b0ab970e4f089811ff39d047d6cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5cb391994df488d9fa0de3da26986aa",
+       "model_id": "514b965f8a444ed3b3c78814f8419226",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,8 +148,7 @@
     "    schrodSolution = schrod(HOperator(TOperator(basis), VOperator(basis, fitting)), basis, fitting)\n",
     "\n",
     "    with open(schrodFileName, \"wb\") as schrodBin:\n",
-    "        dill.dump(schrodSolution, schrodBin)     \n",
-    "        \n",
+    "        dill.dump(schrodSolution, schrodBin)       \n",
     "        \n",
     "    return schrodSolution\n",
     "\n",
@@ -198,20 +197,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#NO\n",
-    "#CO\n",
-    "#N2\n",
-    "#HCL\n",
-    "#O2\n",
-    "#HF\n",
-    "#CL2\n",
-    "#Omega \n",
-    "#Mass"
+    " with open(storagePath + \"NODEFDEF\", 'rb') as schrodBin:\n",
+    "            schrodSolution = dill.load(schrodBin)  \n",
+    "import timeit"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<line.line object at 0x0000025CBA21BCD0>\n",
+      "catmando\n",
+      "waiting to close\n",
+      "closing\n",
+      "joining\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1817b7d497444a21a56184c33d7fdf8a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FigureWidget({\n",
+       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
+       "              'hovertemplate…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "49.48290199999974"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timeit.timeit(schrodSolution.graph, number = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
