Adds working multiprocessing for graphing multiple objects on same graph

--- a/Diatomic Workspace.ipynb
+++ b/Diatomic Workspace.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62b1b0ab970e4f089811ff39d047d6cd",
+       "model_id": "2917e68454864da1b6aede37469f0e2a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "514b965f8a444ed3b3c78814f8419226",
+       "model_id": "e576fe44980541338d8055c712d1a8f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,8 +147,8 @@
     "    fitting = morsePotential(dc, rkr(dc).compute())\n",
     "    schrodSolution = schrod(HOperator(TOperator(basis), VOperator(basis, fitting)), basis, fitting)\n",
     "\n",
-    "    with open(schrodFileName, \"wb\") as schrodBin:\n",
-    "        dill.dump(schrodSolution, schrodBin)       \n",
+    "   # with open(schrodFileName, \"wb\") as schrodBin:\n",
+    "   #     dill.dump(schrodSolution, schrodBin)       \n",
     "        \n",
     "    return schrodSolution\n",
     "\n",
@@ -201,21 +201,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " with open(storagePath + \"NODEFDEF\", 'rb') as schrodBin:\n",
+    " with open(storagePath + \"NODEFDEFV1\", 'rb') as schrodBin:\n",
     "            schrodSolution = dill.load(schrodBin)  \n",
     "import timeit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<line.line object at 0x0000025CBA21BCD0>\n",
       "catmando\n",
       "waiting to close\n",
       "closing\n",
@@ -225,7 +224,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1817b7d497444a21a56184c33d7fdf8a",
+       "model_id": "3213847e869d43eab1f7624934ca04c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -241,10 +240,10 @@
     {
      "data": {
       "text/plain": [
-       "49.48290199999974"
+       "12.256841899999984"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
