Updates Parallel Graphing System to V2

--- a/Diatomic Workspace.ipynb
+++ b/Diatomic Workspace.ipynb
@@ -96,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2917e68454864da1b6aede37469f0e2a",
+       "model_id": "f05172558b544f599b725ffeda76491f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e576fe44980541338d8055c712d1a8f7",
+       "model_id": "db3180f4a9874851b0c9edfad92b88ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,8 +147,8 @@
     "    fitting = morsePotential(dc, rkr(dc).compute())\n",
     "    schrodSolution = schrod(HOperator(TOperator(basis), VOperator(basis, fitting)), basis, fitting)\n",
     "\n",
-    "   # with open(schrodFileName, \"wb\") as schrodBin:\n",
-    "   #     dill.dump(schrodSolution, schrodBin)       \n",
+    "    with open(schrodFileName, \"wb\") as schrodBin:\n",
+    "        dill.dump(schrodSolution, schrodBin)       \n",
     "        \n",
     "    return schrodSolution\n",
     "\n",
@@ -201,14 +201,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " with open(storagePath + \"NODEFDEFV1\", 'rb') as schrodBin:\n",
+    " with open(storagePath + \"NODEFDEF\", 'rb') as schrodBin:\n",
     "            schrodSolution = dill.load(schrodBin)  \n",
     "import timeit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3213847e869d43eab1f7624934ca04c0",
+       "model_id": "faba1bbaa36742d48fbeeb225fe29d1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,16 +240,57 @@
     {
      "data": {
       "text/plain": [
-       "12.256841899999984"
+       "13.849222899999972"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "timeit.timeit(schrodSolution.graph, number = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(**n):\n",
+    "    test2(dictData = n)\n",
+    "def test2(**m):\n",
+    "    print(bool(m[\"dictData\"]))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(cat = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = []\n",
+    "x == []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import get_cpu"
    ]
   },
   {
