--- a/Comp Chem Package Example.ipynb
+++ b/Comp Chem Package Example.ipynb
@@ -65,9 +65,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'O2', 'state': 'ground', 'T': 0.0, 'w': 1580.19, 'wx': 11.98, 'wy': 0.0474, 'wz': 0, 'B': 1.4376766, 'a': 0.0159, 'y': 0, 'D': 4.839e-06, 're': 1.20752, 'u': 7.997457309785}\n",
+      "{'name': 'H2', 'state': 'ground', 'T': 0.0, 'w': 4401.21, 'wx': 121.33, 'wy': 0, 'wz': 0, 'B': 60.853, 'a': 3.062, 'y': 0, 'D': 0.0471, 're': 0.74144, 'u': 0.503912516115}\n",
       "\n",
-      "11.98\n"
+      "121.33\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
     "from nistScraper import getDiatomicConstants\n",
     "\n",
     "#Simply enter the name of the diatomic molecule as a string\n",
-    "dc = getDiatomicConstants(\"O2\")\n",
+    "dc = getDiatomicConstants(\"H2\")\n",
     "\n",
     "#This will display the layout of information in the diatomic constants object \n",
     "print(dc)\n",
@@ -95,23 +95,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "basisFunction.value(r):  2.3059567647029686\n",
+      "basisFunction.value(r):  0.34857492657708267\n",
       "\n",
-      "basisFunction.squaredValue(r):  5.3174366006793825\n",
+      "basisFunction.squaredValue(r):  0.12150447943821857\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a98865212484bcc984fac8711902cc9",
+       "model_id": "50ac059b50734486888d320659202aed",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(FigureWidget({\n",
-       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
-       "              'hovertemplate…"
+       "    'data': [{'fill': 'none',\n",
+       "              'hoverlabel': {'font': {'size': 16}}…"
       ]
      },
      "metadata": {},
@@ -124,7 +124,7 @@
     "\n",
     "#Construction of any basis will be as follows\n",
     "#first pass in dc, followed the specifed energy level for the basis function\n",
-    "basisFunction = how(dc, 10)\n",
+    "basisFunction = how(dc, 50)\n",
     "\n",
     "#All basis functions contain the following method calls\n",
     "\n",
@@ -150,11 +150,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "basis.value(n, r):  0.02284218623844181\n",
+      "basis.value(n, r):  1.3079968679038638\n",
       "\n",
-      "Basis Function n=0 .value(r):  0.0010325775457355882\n",
-      "Basis Function n=1 .value(r):  -0.005867053961588992\n",
-      "Basis Function n=2 .value(r):  0.02284218623844181\n",
+      "Basis Function n=0 .value(r):  0.237287193648484\n",
+      "Basis Function n=1 .value(r):  0.7037300313488829\n",
+      "Basis Function n=2 .value(r):  1.3079968679038638\n",
+      "Basis Function n=3 .value(r):  1.6650450097944065\n",
+      "Basis Function n=4 .value(r):  1.336279444029696\n",
+      "Basis Function n=5 .value(r):  0.28306635280535636\n",
+      "Basis Function n=6 .value(r):  -0.877126743875216\n",
+      "Basis Function n=7 .value(r):  -1.245275871705412\n",
+      "Basis Function n=8 .value(r):  -0.4852499995897436\n",
+      "Basis Function n=9 .value(r):  0.6943503314232115\n",
       "\n",
       "First Basis Function:\n"
      ]
@@ -162,14 +169,14 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de499c0902394380bbe3e2a30c7640c8",
+       "model_id": "4e35fe7d29e149f5b82c72ebbb4bd7b7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(FigureWidget({\n",
-       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
-       "              'hovertemplate…"
+       "    'data': [{'fill': 'none',\n",
+       "              'hoverlabel': {'font': {'size': 16}}…"
       ]
      },
      "metadata": {},
@@ -179,24 +186,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Basis Size:  3\n"
+      "Basis Size:  10\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9920b879fe944dfca5419ede89324bd2",
+       "model_id": "177d677f5cee41d1bc2377bf7498c7b8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(FigureWidget({\n",
-       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
-       "              'hovertemplate…"
+       "    'data': [{'fill': 'none',\n",
+       "              'hoverlabel': {'font': {'size': 16}}…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<basisSet.basisSet at 0x28b8b830430>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -207,7 +224,7 @@
     "#To create a basis set, provide the diatomic constants, the basisFunction class and the size of the set\n",
     "#By default, basisFunction used will be Harmonic Oscillators, (HOW)\n",
     "#and size will be 10\n",
-    "basis = basisSet(dc, basisFunctionClass=how, size=3)\n",
+    "basis = basisSet(dc, basisFunctionClass=how, size=10)\n",
     "\n",
     "#All basis set objects contain the following method calls\n",
     "\n",
@@ -256,12 +273,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6cdba0ba4df4643a2cc0ebf049ab69e",
+       "model_id": "af074bb8041542dcaac2790e27c6916b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(Label(value='Computing RKR Surface'), FloatProgress(value=-1580.1660401422, max=0.0, min=-1580.…"
+       "HBox(children=(Label(value='Computing RKR Surface'), FloatProgress(value=-4400.96734, max=0.0, min=-4400.96734…"
       ]
      },
      "metadata": {},
@@ -271,20 +288,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Point from the PES in the form of (r, E): (1.2131726125066273, 1.5801780200474016).\n"
+      "Point from the PES in the form of (r, E): (0.7469995741625354, 4.4010886700000045).\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e82642b3246544ffa6f01e26aa0b625d",
+       "model_id": "0490de2be80b41f982bf7890e3045e21",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(FigureWidget({\n",
-       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
-       "              'hovertemplate…"
+       "    'data': [{'fill': 'none',\n",
+       "              'hoverlabel': {'font': {'size': 16}}…"
       ]
      },
      "metadata": {},
@@ -325,24 +342,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fitting.value(r):  69720.99581615179\n"
+      "fitting.value(r):  38786.17426489218\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca969c3362804c77ad963b6b94a3c699",
+       "model_id": "90677a899bdc4d3bbc1edda186699c14",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(FigureWidget({\n",
-       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
-       "              'hovertemplate…"
+       "    'data': [{'fill': 'none',\n",
+       "              'hoverlabel': {'font': {'size': 16}}…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<morsePotential.morsePotential at 0x28b8bff7ee0>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -372,24 +399,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\\Comp_Chem_Package\\compChemGlobal.py:16: IntegrationWarning:\n",
-      "\n",
-      "The occurrence of roundoff error is detected, which prevents \n",
-      "  the requested tolerance from being achieved.  The error may be \n",
-      "  underestimated.\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T[1,1]:  1175.9829190998144\n",
-      "V[0,1]:  -184.83382075950172\n",
-      "H[1,1]: -424.46020352580047\n"
+      "T[1,1]:  3296.541410169626\n",
+      "V[0,1]:  -692.5480107266716\n",
+      "H[1,1]: -2058.232222008167\n"
      ]
     }
    ],
@@ -438,14 +453,14 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2701c0644a3f435b8664d21f36cfd374",
+       "model_id": "b9067da7dd284e34809e55834a52a8eb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(FigureWidget({\n",
-       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
-       "              'hovertemplate…"
+       "    'data': [{'fill': 'tozerox',\n",
+       "              'hoverlabel': {'font': {'size': 1…"
       ]
      },
      "metadata": {},
@@ -454,14 +469,14 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ec81e89da8741afae59ebe2c87b4c1a",
+       "model_id": "7118aede46fd4572b9cb91e7ceaa6eac",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(FigureWidget({\n",
-       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
-       "              'hovertemplate…"
+       "    'data': [{'fill': 'none',\n",
+       "              'hoverlabel': {'font': {'size': 16}}…"
       ]
      },
      "metadata": {},
@@ -471,25 +486,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wavefunction.value(r):  775.640326172319\n",
+      "wavefunction.value(r):  2178.28950501084\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c67d9dab3f444c12b44b30f066afb7a3",
+       "model_id": "13923e7cc33a4ba39b8c6c6558709708",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(FigureWidget({\n",
-       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
-       "              'hovertemplate…"
+       "    'data': [{'fill': 'tozerox',\n",
+       "              'hoverlabel': {'font': {'size': 1…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<wavefunction.wavefunction at 0x28b8c08b640>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -504,6 +529,7 @@
     "\n",
     "#Or can also be solved post initalization \n",
     "solution3 = schrod()\n",
+    "\n",
     "solution3.solve(H, basis)\n",
     "\n",
     "#Solutions are graphable objects\n",
