--- a/Diatomic Workspace.ipynb
+++ b/Diatomic Workspace.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,13 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f05172558b544f599b725ffeda76491f",
+       "model_id": "691aa15d716b4a92bb26cca7a742aa7d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db3180f4a9874851b0c9edfad92b88ec",
+       "model_id": "14525816b29c4d8ab148e160efe0c433",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,8 +145,9 @@
     "    \n",
     "    basis = basisSet(dc, basisFunctionClass = how, size = basisSize.value)\n",
     "    fitting = morsePotential(dc, rkr(dc).compute())\n",
-    "    schrodSolution = schrod(HOperator(TOperator(basis), VOperator(basis, fitting)), basis, fitting)\n",
-    "\n",
+    "    #schrodSolution = schrod(HOperator(TOperator(basis), VOperator(basis, fitting)), basis, fitting)\n",
+    "    schrodSolution = schrod(HOperator(basis, fitting), basis, fitting)\n",
+    "    \n",
     "    with open(schrodFileName, \"wb\") as schrodBin:\n",
     "        dill.dump(schrodSolution, schrodBin)       \n",
     "        \n",
@@ -197,9 +198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '.\\\\dataStorage\\\\NODEFDEF'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                   Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-24757988c1f7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstoragePath\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"NODEFDEF\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'rb'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mschrodBin\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m            \u001b[0mschrodSolution\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdill\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mschrodBin\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtimeit\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '.\\\\dataStorage\\\\NODEFDEF'"
+     ]
+    }
+   ],
    "source": [
     " with open(storagePath + \"NODEFDEF\", 'rb') as schrodBin:\n",
     "            schrodSolution = dill.load(schrodBin)  \n",
@@ -208,48 +221,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "catmando\n",
-      "waiting to close\n",
-      "closing\n",
-      "joining\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "faba1bbaa36742d48fbeeb225fe29d1f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(FigureWidget({\n",
-       "    'data': [{'hoverlabel': {'font': {'size': 16}},\n",
-       "              'hovertemplate…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "13.849222899999972"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "timeit.timeit(schrodSolution.graph, number = 1)"
+    "#timeit.timeit(schrodSolution.graph, number = 1)"
    ]
   },
   {
@@ -264,41 +240,6 @@
     "    print(bool(m[\"dictData\"]))\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test(cat = 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = []\n",
-    "x == []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from multiprocessing import get_cpu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
