Update Comp Chem Package Example.ipynb

--- a/Comp Chem Package Example.ipynb
+++ b/Comp Chem Package Example.ipynb
@@ -76,7 +76,7 @@
     "from nistScraper import getDiatomicConstants\n",
     "\n",
     "#Simply enter the name of the diatomic molecule as a string\n",
-    "dc = getDiatomicConstants(\"O2\")\n",
+    "dc = getDiatomicConstants(\"CO\")\n",
     "\n",
     "#This will display the layout of information in the diatomic constants object \n",
     "print(dc)\n",
