--- a/Comp Chem Package Example.ipynb
+++ b/Comp Chem Package Example.ipynb
@@ -65,9 +65,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'H2', 'state': 'ground', 'T': 0.0, 'w': 4401.21, 'wx': 121.33, 'wy': 0, 'wz': 0, 'B': 60.853, 'a': 3.062, 'y': 0, 'D': 0.0471, 're': 0.74144, 'u': 0.503912516115}\n",
+      "{'name': 'CO', 'state': 'ground', 'T': 0.0, 'w': 2169.81358, 'wx': 13.28831, 'wy': 0, 'wz': 0, 'B': 1.93128087, 'a': 0.01750441, 'y': 0, 'D': 6.12147e-06, 're': 1.128323, 'u': 6.8562086380025615}\n",
       "\n",
-      "121.33\n"
+      "13.28831\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
     "from nistScraper import getDiatomicConstants\n",
     "\n",
     "#Simply enter the name of the diatomic molecule as a string\n",
-    "dc = getDiatomicConstants(\"H2\")\n",
+    "dc = getDiatomicConstants(\"CO\")\n",
     "\n",
     "#This will display the layout of information in the diatomic constants object \n",
     "print(dc)\n",
@@ -95,16 +95,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "basisFunction.value(r):  0.34857492657708267\n",
+      "basisFunction.value(r):  -1.0934777638222464\n",
       "\n",
-      "basisFunction.squaredValue(r):  0.12150447943821857\n",
+      "basisFunction.squaredValue(r):  1.1956936199737005\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50ac059b50734486888d320659202aed",
+       "model_id": "ee4f1d77f5894806b790d2fec88e98b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,7 +124,7 @@
     "\n",
     "#Construction of any basis will be as follows\n",
     "#first pass in dc, followed the specifed energy level for the basis function\n",
-    "basisFunction = how(dc, 50)\n",
+    "basisFunction = how(dc, 10)\n",
     "\n",
     "#All basis functions contain the following method calls\n",
     "\n",
@@ -150,18 +150,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "basis.value(n, r):  1.3079968679038638\n",
+      "basis.value(n, r):  0.8708245670604646\n",
       "\n",
-      "Basis Function n=0 .value(r):  0.237287193648484\n",
-      "Basis Function n=1 .value(r):  0.7037300313488829\n",
-      "Basis Function n=2 .value(r):  1.3079968679038638\n",
-      "Basis Function n=3 .value(r):  1.6650450097944065\n",
-      "Basis Function n=4 .value(r):  1.336279444029696\n",
-      "Basis Function n=5 .value(r):  0.28306635280535636\n",
-      "Basis Function n=6 .value(r):  -0.877126743875216\n",
-      "Basis Function n=7 .value(r):  -1.245275871705412\n",
-      "Basis Function n=8 .value(r):  -0.4852499995897436\n",
-      "Basis Function n=9 .value(r):  0.6943503314232115\n",
+      "Basis Function n=0 .value(r):  0.09100802389550973\n",
+      "Basis Function n=1 .value(r):  -0.3469319042644413\n",
+      "Basis Function n=2 .value(r):  0.8708245670604646\n",
+      "Basis Function n=3 .value(r):  -1.6333450415489534\n",
+      "Basis Function n=4 .value(r):  2.359083060776459\n",
+      "Basis Function n=5 .value(r):  -2.560913227705785\n",
+      "Basis Function n=6 .value(r):  1.8319706496780743\n",
+      "Basis Function n=7 .value(r):  -0.2686303065479276\n",
+      "Basis Function n=8 .value(r):  -1.3515966115967784\n",
+      "Basis Function n=9 .value(r):  1.9707419673566084\n",
       "\n",
       "First Basis Function:\n"
      ]
@@ -169,7 +169,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e35fe7d29e149f5b82c72ebbb4bd7b7",
+       "model_id": "3076c2aad0c145889e666d6026c673d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +192,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "177d677f5cee41d1bc2377bf7498c7b8",
+       "model_id": "d487baa616e14ba5b0a121551f944196",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,7 +208,7 @@
     {
      "data": {
       "text/plain": [
-       "<basisSet.basisSet at 0x28b8b830430>"
+       "<basisSet.basisSet at 0x1f16df7edf0>"
       ]
      },
      "execution_count": 4,
@@ -273,12 +273,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af074bb8041542dcaac2790e27c6916b",
+       "model_id": "96e0b9eab98c4c83aedb8c53efd7783f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(Label(value='Computing RKR Surface'), FloatProgress(value=-4400.96734, max=0.0, min=-4400.96734…"
+       "HBox(children=(Label(value='Computing RKR Surface'), FloatProgress(value=-2169.78700338, max=0.0, min=-2169.78…"
       ]
      },
      "metadata": {},
@@ -288,13 +288,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Point from the PES in the form of (r, E): (0.7469995741625354, 4.4010886700000045).\n"
+      "Point from the PES in the form of (r, E): (1.1304593750689604, 2.169800291690002).\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0490de2be80b41f982bf7890e3045e21",
+       "model_id": "994394641baf46729e14a2568b061760",
        "version_major": 2,
        "version_minor": 0
       },
@@ -342,13 +342,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fitting.value(r):  38786.17426489218\n"
+      "fitting.value(r):  86562.33682426663\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90677a899bdc4d3bbc1edda186699c14",
+       "model_id": "491d3d7bd37b43438dadd09cf0d62454",
        "version_major": 2,
        "version_minor": 0
       },
@@ -364,7 +364,7 @@
     {
      "data": {
       "text/plain": [
-       "<morsePotential.morsePotential at 0x28b8bff7ee0>"
+       "<morsePotential.morsePotential at 0x1f170179dc0>"
       ]
      },
      "execution_count": 6,
@@ -402,9 +402,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T[1,1]:  3296.541410169626\n",
-      "V[0,1]:  -692.5480107266716\n",
-      "H[1,1]: -2058.232222008167\n"
+      "T[1,1]:  1612.5523403837517\n",
+      "V[0,1]:  -132.27867559605755\n",
+      "H[1,1]: -375.8114562082976\n"
      ]
     }
    ],
@@ -453,7 +453,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9067da7dd284e34809e55834a52a8eb",
+       "model_id": "cc9dae506bc649b196c7242b93229855",
        "version_major": 2,
        "version_minor": 0
       },
@@ -469,7 +469,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7118aede46fd4572b9cb91e7ceaa6eac",
+       "model_id": "bd2ed0ad295047cb8139ab69c87d19ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -486,14 +486,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wavefunction.value(r):  2178.28950501084\n",
+      "wavefunction.value(r):  1078.823634829513\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13923e7cc33a4ba39b8c6c6558709708",
+       "model_id": "ee8b6ef46eac4f609b82df966535bb6c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -509,7 +509,7 @@
     {
      "data": {
       "text/plain": [
-       "<wavefunction.wavefunction at 0x28b8c08b640>"
+       "<wavefunction.wavefunction at 0x1f16fc09f10>"
       ]
      },
      "execution_count": 8,
