Ports base HF code to new system

--- a/Comp Chem Package Example.ipynb
+++ b/Comp Chem Package Example.ipynb
@@ -98,13 +98,15 @@
       "basisFunction.value(r):  -1.0934777638222464\n",
       "\n",
       "basisFunction.squaredValue(r):  1.1956936199737005\n",
-      "\n"
+      "\n",
+      "graph objects called\n",
+      "2\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee4f1d77f5894806b790d2fec88e98b6",
+       "model_id": "279e0e839e094d558b344a63157c60bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,21 +157,16 @@
       "Basis Function n=0 .value(r):  0.09100802389550973\n",
       "Basis Function n=1 .value(r):  -0.3469319042644413\n",
       "Basis Function n=2 .value(r):  0.8708245670604646\n",
-      "Basis Function n=3 .value(r):  -1.6333450415489534\n",
-      "Basis Function n=4 .value(r):  2.359083060776459\n",
-      "Basis Function n=5 .value(r):  -2.560913227705785\n",
-      "Basis Function n=6 .value(r):  1.8319706496780743\n",
-      "Basis Function n=7 .value(r):  -0.2686303065479276\n",
-      "Basis Function n=8 .value(r):  -1.3515966115967784\n",
-      "Basis Function n=9 .value(r):  1.9707419673566084\n",
       "\n",
-      "First Basis Function:\n"
+      "First Basis Function:\n",
+      "graph objects called\n",
+      "2\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3076c2aad0c145889e666d6026c673d0",
+       "model_id": "b48ef74ad3c048b6b162e82b9e814cc8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,13 +183,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Basis Size:  10\n"
+      "Basis Size:  3\n",
+      "graph objects called\n",
+      "6\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d487baa616e14ba5b0a121551f944196",
+       "model_id": "20c58fe1af444ef49e8967492b9e2ceb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,7 +207,7 @@
     {
      "data": {
       "text/plain": [
-       "<basisSet.basisSet at 0x1f16df7edf0>"
+       "<basisSet.basisSet at 0x196c662b820>"
       ]
      },
      "execution_count": 4,
@@ -224,7 +223,7 @@
     "#To create a basis set, provide the diatomic constants, the basisFunction class and the size of the set\n",
     "#By default, basisFunction used will be Harmonic Oscillators, (HOW)\n",
     "#and size will be 10\n",
-    "basis = basisSet(dc, basisFunctionClass=how, size=10)\n",
+    "basis = basisSet(dc, basisFunctionClass=how, size=3)\n",
     "\n",
     "#All basis set objects contain the following method calls\n",
     "\n",
@@ -273,7 +272,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96e0b9eab98c4c83aedb8c53efd7783f",
+       "model_id": "adedbf7182d34df1a0e76f46566034c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,7 +293,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "994394641baf46729e14a2568b061760",
+       "model_id": "7348adf795a14682a6e188e38900789a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -342,13 +341,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fitting.value(r):  86562.33682426663\n"
+      "fitting.value(r):  86562.33682426663\n",
+      "graph objects called\n",
+      "2\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "491d3d7bd37b43438dadd09cf0d62454",
+       "model_id": "3495a20f025a49e1b53a13074be257ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -364,7 +365,7 @@
     {
      "data": {
       "text/plain": [
-       "<morsePotential.morsePotential at 0x1f170179dc0>"
+       "<morsePotential.morsePotential at 0x196c677af70>"
       ]
      },
      "execution_count": 6,
@@ -375,6 +376,7 @@
    "source": [
     "#Potential Energy Surface Fitting Method\n",
     "from morsePotential import *\n",
+    "from howPotential import * \n",
     "\n",
     "#the fitting method at a minimum must be initalized with the diatomic constants \n",
     "fitting = morsePotential(dc)\n",
@@ -402,7 +404,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T[1,1]:  1612.5523403837517\n",
+      "T[1,1]:  1612.55234\n",
       "V[0,1]:  -132.27867559605755\n",
       "H[1,1]: -375.8114562082976\n"
      ]
@@ -451,9 +453,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph objects called\n",
+      "6\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc9dae506bc649b196c7242b93229855",
+       "model_id": "dd9c82773a974e70b3b8ffe4b5454030",
        "version_major": 2,
        "version_minor": 0
       },
@@ -467,9 +477,23 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YESSS!! Squared Wavefunction n=2\n",
+      "YESSS!! Wavefunction n=2\n",
+      "YESSS!! Squared Wavefunction n=1\n",
+      "YESSS!! Wavefunction n=1\n",
+      "YESSS!! Squared Wavefunction n=0\n",
+      "YESSS!! Wavefunction n=0\n",
+      "graph objects called\n",
+      "7\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd2ed0ad295047cb8139ab69c87d19ef",
+       "model_id": "4ef7a76aa3c842e28c7d696650c8ad0c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -486,14 +510,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wavefunction.value(r):  1078.823634829513\n",
-      "\n"
+      "wavefunction.value(r):  1080.5165870894048\n",
+      "\n",
+      "graph objects called\n",
+      "1\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee8b6ef46eac4f609b82df966535bb6c",
+       "model_id": "69959037f0f144b3b64e95adbdf57b67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -509,7 +535,7 @@
     {
      "data": {
       "text/plain": [
-       "<wavefunction.wavefunction at 0x1f16fc09f10>"
+       "<wavefunction.wavefunction at 0x196c66da280>"
       ]
      },
      "execution_count": 8,
@@ -556,6 +582,129 @@
     "#Wavefunctions are graphable objects \n",
     "wavefunctions[2].graph()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "H.integrationStart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "graph objects called\n",
+      "1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ae0ae7be0fdd4bc193148dfb3f4ef43b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FigureWidget({\n",
+       "    'data': [{'fill': 'tozerox',\n",
+       "              'hoverlabel': {'font': {'size': 1…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<wavefunction.wavefunction at 0x196c6660f40>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wavefunctions[0].graph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hartreeFock import *\n",
+    "from molecule import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system = molecule()\n",
+    "system.addAtom(atom(vector(1,1,2+1.4), 1, 1))\n",
+    "system.addAtom(atom(vector(1,1,2), 1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H, basis = hartreeFock(system).initialIntegrals()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<molecule.gaussian at 0x196c692f6d0>,\n",
+       " <molecule.gaussian at 0x196c692fb50>,\n",
+       " <molecule.gaussian at 0x196c692fca0>]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basis[0].contractedGaussians"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
