--- a/Hartree-Fock/Hartree_Class.ipynb
+++ b/Hartree-Fock/Hartree_Class.ipynb
@@ -17,6 +17,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Must be included in all Comp Chem Notebooks that want to make use of the library\n",
+    "#Allow Notebook to Import from Comp_Chem_Package\n",
+    "import sys\n",
+    "if(\"win\" in sys.platform):\n",
+    "    sys.path.append(\"..\\\\Comp_Chem_Package\")\n",
+    "else: \n",
+    "    sys.path.append(\"../Comp_Chem_Package\")\n",
+    "\n",
+    "from compChemGlobal import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "from molecule import atom\n",
     "from molecule import vector\n",
@@ -153,9 +170,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
