--- a/Hartree-Fock/Hartree_Fock.ipynb
+++ b/Hartree-Fock/Hartree_Fock.ipynb
@@ -50,8 +50,8 @@
     "scf = importNotebook(\"Hartree_SCF\")\n",
     "\n",
     "#define SCF convergence critera, and max number of iteration cycles\n",
-    "SCF_CONVERGENCE = pow(10, -100)\n",
-    "MAX_ITERATIONS = 100\n",
+    "SCF_CONVERGENCE = pow(10, -15)\n",
+    "MAX_ITERATIONS = 500\n",
     "\n",
     "#Step 1\n",
     "#Specify Molecules, Nuclear Coordinates, and Charge of the nucli Number of Electrons,\n",
@@ -158,7 +158,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.12040901 -0.95837996]\n",
+      " [-0.95837996 -1.12040901]]\n"
+     ]
+    }
+   ],
    "source": [
     "#Prepare for the SCF procedure\n",
     "\n",
@@ -169,7 +178,9 @@
     "X = scf.X(S, size)\n",
     "\n",
     "#get guess Fock matrix, assume 2-electron term is equal to 0\n",
-    "F = H"
+    "F = H\n",
+    "\n",
+    "print(F)"
    ]
   },
   {
@@ -183,16 +194,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "F** [[-4.75602306e-01 -1.08869060e-16]\n",
+      " [-2.35585295e-16 -1.25279706e+00]]\n",
+      "C [[ 0.54893404  1.21146407]\n",
+      " [ 0.54893404 -1.21146407]]\n",
       "SCF Iteration #1, Electronic Energy: -1.8310000394614832 Hartrees, Total Energy: -1.116714325175769 Hartrees\n",
-      "SCF Iteration #2, Electronic Energy: -1.8310000394614832 Hartrees, Total Energy: -1.116714325175769 Hartrees\n",
+      "F [[-0.36553735 -0.59388537]\n",
+      " [-0.59388537 -0.36553735]]\n",
+      "\n",
+      "F** [[ 6.70267761e-01 -2.12833504e-16]\n",
+      " [-2.35379740e-16 -5.78202977e-01]]\n",
+      "C [[-0.54893404  1.21146407]\n",
+      " [-0.54893404 -1.21146407]]\n",
+      "SCF Iteration #2, Electronic Energy: -1.8310000394614834 Hartrees, Total Energy: -1.116714325175769 Hartrees\n",
+      "F [[-0.36553735 -0.59388537]\n",
+      " [-0.59388537 -0.36553735]]\n",
+      "\n",
+      "F** [[ 6.70267761e-01 -1.51889583e-16]\n",
+      " [-3.69879271e-16 -5.78202977e-01]]\n",
+      "C [[-0.54893404  1.21146407]\n",
+      " [-0.54893404 -1.21146407]]\n",
       "SCF Iteration #3, Electronic Energy: -1.8310000394614832 Hartrees, Total Energy: -1.116714325175769 Hartrees\n",
+      "F [[-0.36553735 -0.59388537]\n",
+      " [-0.59388537 -0.36553735]]\n",
+      "\n",
       "--------------------------------------------------\n",
       "\n",
-      "Final SCF Energy: -1.8310000394614832\n",
-      "\n",
-      "[-0.57820298  0.67026776]\n",
-      "[[-1.12040901 -0.95837996]\n",
-      " [-0.95837996 -1.12040901]]\n"
+      "Final SCF Energy: -1.8310000394614832\n"
      ]
     }
    ],
@@ -208,13 +236,14 @@
     "  \n",
     "    #diagnolze the Fock matrix and convert it to MO basis \n",
     "    F = X.transpose() * F * X \n",
+    "    print(\"F**\",F)\n",
     "    \n",
     "    #diagnolize the Fock Matrix to obtain the MOs and the their respective energies\n",
     "    MOEnergy, MO = np.linalg.eigh(F)\n",
     "    \n",
     "    #Transform the MO basis MOs to an AO basis\n",
     "    C = X * MO\n",
-    "    \n",
+    "    print(\"C\", C)\n",
     "    #compute the electron density, the two electron term, and then use G to compute the new Fock matrix\n",
     "    P = scf.densityMatrix(C, system.N, size)\n",
     "    G = scf.G(electronRepulsion, P, size)\n",
@@ -241,11 +270,123 @@
     "    \n",
     "    #display information about current SCF iteration to the user\n",
     "    print(\"SCF Iteration #\" + str(sizeE) + \", Electronic Energy: \" + str(E[sizeE-1]) + \" Hartrees, Total Energy: \" + str(totalE) + \" Hartrees\")\n",
-    "    \n",
+    "    print(\"F\", F)\n",
+    "    print()\n",
     "print(\"-\"*50)\n",
     "print()\n",
     "print(\"Final SCF Energy: \" + str(E[sizeE-1]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[-4.75602306e-01, -1.08869060e-16],\n",
+       "        [-2.35585295e-16, -1.25279706e+00]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.transpose() * H * X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[ 0.19629237, -0.19629237],\n",
+       "        [-1.14111803, -1.14111803]])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.transpose() * H"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5489340404350302"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[0,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[ 0.83124788,  0.54601225],\n",
+       "        [-1.88342265, -1.77607354]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.matmul(X, H)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[ 0.83124788,  0.54601225],\n",
+       "        [-1.88342265, -1.77607354]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X * H"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -265,9 +406,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
