--- a/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
+++ b/Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
@@ -350,15 +350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-<<<<<<< HEAD:Learning/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
-<<<<<<< HEAD:Basis Sets/Harmonic Oscillator Wavefunction.ipynb
-       "model_id": "237ab9c168e1412fbbd769a13c7b507a",
-=======
-       "model_id": "e0e9b82c003d4c14a5290df11019dfe7",
->>>>>>> parent of 917e0bd (Adds working version for Dr. LaRue Lab):Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
-=======
-       "model_id": "2a8035355ee743368d8388f9b7a4a770",
->>>>>>> parent of 1e124aa (Prepares for student lab installation):Basis Sets/.ipynb_checkpoints/Harmonic Oscillator Wavefunction-Copy1-checkpoint.ipynb
+       "model_id": "f3489e6a31384dfaaa551046b48b14af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -374,15 +366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-<<<<<<< HEAD:Learning/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
-<<<<<<< HEAD:Basis Sets/Harmonic Oscillator Wavefunction.ipynb
-       "model_id": "d916c9e7bdf9482f9d008ac2ba4abd2b",
-=======
-       "model_id": "9e3243b8d6eb4203abfeb0a28933981d",
->>>>>>> parent of 917e0bd (Adds working version for Dr. LaRue Lab):Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
-=======
-       "model_id": "dec297b35b9d4f438bab852c6d8cd319",
->>>>>>> parent of 1e124aa (Prepares for student lab installation):Basis Sets/.ipynb_checkpoints/Harmonic Oscillator Wavefunction-Copy1-checkpoint.ipynb
+       "model_id": "2b5b2101269a4a4c9f12d9e9dcd04cc3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -474,15 +458,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-<<<<<<< HEAD:Learning/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
-<<<<<<< HEAD:Basis Sets/Harmonic Oscillator Wavefunction.ipynb
-       "model_id": "64561ecc1dd742aa8753187dd351a9e3",
-=======
-       "model_id": "b08e0a245830404a8b87d6eebcd7f9d7",
->>>>>>> parent of 917e0bd (Adds working version for Dr. LaRue Lab):Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
-=======
-       "model_id": "052392fc5cd542338adb8eab2e699223",
->>>>>>> parent of 1e124aa (Prepares for student lab installation):Basis Sets/.ipynb_checkpoints/Harmonic Oscillator Wavefunction-Copy1-checkpoint.ipynb
+       "model_id": "302b2ee67845425badedc4e21adba790",
        "version_major": 2,
        "version_minor": 0
       },
@@ -498,15 +474,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-<<<<<<< HEAD:Learning/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
-<<<<<<< HEAD:Basis Sets/Harmonic Oscillator Wavefunction.ipynb
-       "model_id": "ffd830854c9b4b38b5b0d596879a883c",
-=======
-       "model_id": "d995fe340dbe4369b1085fbd4546fd0f",
->>>>>>> parent of 917e0bd (Adds working version for Dr. LaRue Lab):Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
-=======
-       "model_id": "76be267bb76d4c7aaf496dd1ecf36df5",
->>>>>>> parent of 1e124aa (Prepares for student lab installation):Basis Sets/.ipynb_checkpoints/Harmonic Oscillator Wavefunction-Copy1-checkpoint.ipynb
+       "model_id": "168adc07c7de40bea2578bfae16e3765",
        "version_major": 2,
        "version_minor": 0
       },
@@ -544,24 +512,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-<<<<<<< HEAD:Learning/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
-<<<<<<< HEAD:Basis Sets/Harmonic Oscillator Wavefunction.ipynb
-       "model_id": "cd3e9c44e32e418a9ac4f5a8853b7ae5",
-=======
-       "model_id": "4d55764162cc46f4a66eff69da32d3e5",
->>>>>>> parent of 917e0bd (Adds working version for Dr. LaRue Lab):Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
-=======
-       "model_id": "01d88e82557342179d821efd2b508759",
->>>>>>> parent of 1e124aa (Prepares for student lab installation):Basis Sets/.ipynb_checkpoints/Harmonic Oscillator Wavefunction-Copy1-checkpoint.ipynb
+       "model_id": "111d12ff297f4907843b22906397cd9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -577,15 +530,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-<<<<<<< HEAD:Learning/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
-<<<<<<< HEAD:Basis Sets/Harmonic Oscillator Wavefunction.ipynb
-       "model_id": "43c94f3c3240457098652154dbd9c434",
-=======
-       "model_id": "8a53a1cfcad1437caa0cd935c2396eb6",
->>>>>>> parent of 917e0bd (Adds working version for Dr. LaRue Lab):Basis Sets/Harmonic Oscillator Wavefunction-Copy1.ipynb
-=======
-       "model_id": "0e9a9bcb8e6d45b8b39fb7b2cd670610",
->>>>>>> parent of 1e124aa (Prepares for student lab installation):Basis Sets/.ipynb_checkpoints/Harmonic Oscillator Wavefunction-Copy1-checkpoint.ipynb
+       "model_id": "13b7c0b8434446f29d089527b5cf190d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -609,6 +554,7 @@
     "from graphable import *\n",
     "from nistScraper import *\n",
     "\n",
+    "\n",
     "#Declare all variables here\n",
     "graph = widgets.VBox([])\n",
     "\n",
@@ -624,11 +570,6 @@
     "    value = 2,\n",
     "    step = 100, \n",
     "    description = '<p style=\"font-family:verdana;font-size:15px\">ω in 1/cm</p>'\n",
-    ")\n",
-    "basisSize = widgets.IntText(\n",
-    "    min = 1, \n",
-    "    value = 5, \n",
-    "    description = '<p style=\"font-family:verdana;font-size:15px\">Basis Size</p>'\n",
     ")\n",
     "\n",
     "dc = buildDiatomicConstants(w=w.value, u=mass.value)\n",
@@ -665,7 +606,7 @@
     "    dc[\"w\"] = w.value\n",
     "    dc[\"u\"] = mass.value\n",
     "    \n",
-    "    basis = basisSet(dc, size=basisSize.value)\n",
+    "    basis = basisSet(dc, size=4)\n",
     "    pes = howPES(dc)\n",
     "\n",
     "    T = TOperator(basis, integrationStart = -inf)\n",
@@ -681,70 +622,12 @@
     "observeFunction = lambda value : buildSolution(graph)\n",
     "mass.observe(observeFunction)\n",
     "w.observe(observeFunction)\n",
-    "basisSize.observe(observeFunction)\n",
     "\n",
     "#Graph data\n",
     "buildSolution(graph)\n",
     "display(graph)\n",
-    "display(widgets.HBox([mass, w, basisSize]))"
+    "display(widgets.HBox([mass, w]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.954929550893284"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dc[\"w\"] * 100 * c * hbar * jToWavenumbers * (basis.size-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'V' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-eaa185db0265>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'V' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print(V)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "getDiatomicConstants(\"CO\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
